<resources>
    <string name="app_name">souq admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="sold_out">Sold out</string>
    <string name="lowInStack">Low in stack</string>
    <string name="admin">admin</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category Type </string>
    <string name="count">count</string>
    <string name="details">Details</string>
    <string name="title">Product Title</string>
    <string name="price"> Price</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="prand">Brand</string>
    <string name="company">Company</string>
    <string name="sale">Sale Type</string>
    <string name="add">Add Product</string>
    <string name="amount">Amount</string>
    <string name="duration">Duration</string>
    <string name="order_no">Order No.</string>
    <string name="order_on">Order On:</string>
    <string name="order_id">Order ID :</string>
    <string name="order_date">OrderDate :</string>
    <string name="payment_method">Payment Method :</string>
    <string name="quantity">Qty</string>
    <string name="received">Received</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="price_details">Price Details:</string>
    <string name="tax">Tax:</string>
    <string name="promo_code_disc">Promo Code Discount:</string>
    <string name="wallet_balance">Wallet Balance:</string>
    <string name="total_price">Total Price:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update_order">Update Order</string>
    <string name="update">Update</string>
    <string name="low">Low in stack</string>
    <string name="noItem">"No Item Avilable "</string>

    <string name="packing">Packing</string>
    <string name="welcome">Welcome to E-Come</string>
    <string name="sign">Sign in to Continue</string>
    <string name="E_Mail">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="or">OR</string>
    <string name="googleLogin">Login With Google</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="account">Don\'t have account?</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="have_a_account">have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_again">Password Again</string>
    <string name="your_email">Your Email</string>
    <string name="company_name">Company Name</string>
    <string name="sign_in">Sign In</string>
    <string name="notification_Channel_ID">ahmed.adel.sleeem.clowyy.channel1</string>
    <string name="order_details">Order Details</string>

    <string-array name="clothes_size_list">
        <item> M </item>
        <item> L </item>
        <item> XL </item>
        <item> XXL </item>
        <item> 3XL </item>
    </string-array>
    <string-array name="shoes_size_list">
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
    </string-array>

    <string-array name="status_list">
        <item>Packing</item>
        <item>Shipped</item>
        <item>Delivered</item>
        <item>Canceled</item>
    </string-array>
</resources>