<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.souqadmin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_productFragment"
            app:destination="@id/productFragment" />
        <action
            android:id="@+id/action_nav_home_to_ordersFragment"
            app:destination="@id/ordersFragment" />
        <action
            android:id="@+id/action_nav_home_to_lowInStackFragment"
            app:destination="@id/lowInStackFragment" />
        <action
            android:id="@+id/action_nav_home_to_soldOutFragment"
            app:destination="@id/soldOutFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.souqadmin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.souqadmin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.souqadmin.ui.product.ProductFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.souqadmin.ui.product.AddProductFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_selectColorFragment"
            app:destination="@id/selectColorFragment" />
        <action
            android:id="@+id/action_addProductFragment_to_selectSizeFragment"
            app:destination="@id/selectSizeFragment" />
        <action
            android:id="@+id/action_addProductFragment_to_productFragment"
            app:destination="@id/productFragment"
            app:popUpTo="@id/productFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="product"
            app:argType="com.example.souqadmin.pojo.ProductResponse$Item"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/selectColorFragment"
        android:name="com.example.souqadmin.ui.product.buttomDialog.SelectColorFragment"
        android:label="fragment_select_color_list_dialog"
        tools:layout="@layout/fragment_select_color_list_dialog" >
        <argument
            android:name="colorList"
            app:argType="string[]"
            app:nullable="true" />
    </dialog>
    <dialog
        android:id="@+id/selectSizeFragment"
        android:name="com.example.souqadmin.ui.product.buttomDialog.SelectSizeFragment"
        android:label="fragment_select_size_list_dialog"
        tools:layout="@layout/fragment_select_size_list_dialog" >
        <argument
            android:name="category"
            app:argType="string" />
        <argument
            android:name="sizeList"
            app:argType="string[]"
            app:nullable="true" />
    </dialog>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.souqadmin.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.example.souqadmin.ui.orders.OrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details" >
        <argument
            android:name="orderResponse"
            app:argType="com.example.souqadmin.pojo.OrderResponseItem" />
        <action
            android:id="@+id/action_orderDetailsFragment_to_ordersFragment"
            app:destination="@id/ordersFragment"
            app:popUpTo="@id/ordersFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/lowInStackFragment"
        android:name="com.example.souqadmin.ui.low_in_stack.LowInStackFragment"
        android:label="@string/lowInStack"
        tools:layout="@layout/fragment_low_in_stack" >
        <action
            android:id="@+id/action_lowInStackFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/soldOutFragment"
        android:name="com.example.souqadmin.ui.soldOut.SoldOutFragment"
        android:label="@string/sold_out"
        tools:layout="@layout/fragment_sold_out" >
        <action
            android:id="@+id/action_soldOutFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
</navigation>