<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".login.RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/descCartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/let_s_get_started"
            android:textColor="@color/neutralDark"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/priceCartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_an_new_account"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/descCartTextView"
            app:layout_constraintStart_toStartOf="@+id/descCartTextView"
            app:layout_constraintTop_toBottomOf="@+id/descCartTextView" />

        <EditText
            android:id="@+id/fullNameRegisterEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/register_custom_edittext_shape"
            android:drawableLeft="@drawable/ic_company"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceCartTextView"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailRegisterEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/register_custom_edittext_shape"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameRegisterEditText"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordRegisterEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/register_custom_edittext_shape"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailRegisterEditText"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/confirmPasswordRegisterEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/register_custom_edittext_shape"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signUpRegisterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:background="@drawable/register_button_shape"
            app:backgroundTint="@color/primaryBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterEditText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/have_a_account"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/SignInRegisterTextView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpRegisterButton" />

        <TextView
            android:id="@+id/SignInRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/sign_in"
            android:textColor="@color/primaryBlue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>