<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.AddProductFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/add_image"
        android:background="@drawable/edit_text_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/require_icon"
        android:background="@drawable/edit_text_shape"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/price_tv"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:drawableStart="@drawable/require_icon"
        android:background="@drawable/edit_text_shape"
        android:padding="16dp"
        android:hint="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <EditText
        android:id="@+id/count_tv"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/count"
        android:drawableStart="@drawable/require_icon"
        android:background="@drawable/edit_text_shape"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/price_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toEndOf="@+id/price_tv"
        app:layout_constraintTop_toTopOf="@+id/price_tv"
        app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Category_tv"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/count_tv">

                <AutoCompleteTextView
                    android:id="@+id/category_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_shape"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/require_icon"
                    android:inputType="none"
                    android:text="@string/category" />

            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prouduct_size"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Category_tv">

        <AutoCompleteTextView
            android:id="@+id/size_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shape"
            android:padding="16dp"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prouduct_size">

        <AutoCompleteTextView
            android:id="@+id/color_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_shape"
            android:padding="16dp"
            android:inputType="none"
            android:text="@string/color" />

    </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/edit_text_shape"
                android:ems="10"
                android:hint="description"
                android:inputType="textPersonName"
                android:maxLines="4"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_color" />

            <EditText
                android:id="@+id/company_name"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/require_icon"
                android:background="@drawable/edit_text_shape"
                android:padding="16dp"
                android:hint="@string/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_tv" />

            <EditText
                android:id="@+id/prand_name"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/prand"
                android:drawableStart="@drawable/require_icon"
                android:background="@drawable/edit_text_shape"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/company_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.892"
                app:layout_constraintStart_toEndOf="@+id/company_name"
                app:layout_constraintTop_toTopOf="@+id/company_name"
                app:layout_constraintVertical_bias="0.0" />



            <EditText
                android:id="@+id/sale_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/sale"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_shape"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prand_name" />

            <EditText
                android:id="@+id/amoune_et"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:background="@drawable/edit_text_shape"
                android:padding="16dp"
                android:hint="@string/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sale_tv" />


            <EditText
                android:id="@+id/duration_et"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_shape"
                android:ems="10"
                android:hint="@string/duration"
                android:inputType="number"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.906"
                app:layout_constraintStart_toEndOf="@+id/amoune_et"
                app:layout_constraintTop_toTopOf="@+id/amoune_et" />

            <com.dx.dxloadingbutton.lib.LoadingButton
                android:id="@+id/add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                app:lb_btnText="@string/add"
                app:lb_btnColor="@color/primaryBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amoune_et" />


            <com.dx.dxloadingbutton.lib.LoadingButton
                android:id="@+id/update_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:visibility="gone"
                app:lb_btnText="@string/update"
                app:lb_btnColor="@color/primaryBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amoune_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>